--- a/coding-editor-frontend/package.json
+++ b/coding-editor-frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "codemirror": "^6.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
