--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,22 @@
-# Node modules for frontend
-/frontend/node_modules/
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+env/
+venv/
+*.sqlite3
 
-# Python virtual env for backend
-/backend/venv/
-
-# IDE files
+# VS Code
 .vscode/
+
+# Node
+node_modules/
+build/
+dist/
+
+# OS
 .DS_Store
 
-# Logs
-*.log
+# Docker
+*.pid
